# SnapLock

./: README.md  index.html  package.json  pnpm-lock.yaml
memory_bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
snaplock/: package.json  pnpm-lock.yaml
snaplock/src/: App.vue  main.ts
snaplock/src-tauri/: Cargo.toml  tauri.conf.json
snaplock/src-tauri/src/: app_setup.rs  camera.rs  constants.rs  handlers.rs  main.rs  monitoring.rs  state.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/libs/ffmpeg/: README.txt
src-tauri/src/: app_setup.rs  camera.rs  config.rs  constants.rs  handlers.rs  logger.rs  main.rs  monitoring.rs  process_utils.rs  recorder.rs  session_monitor.rs  state.rs
src/styles/: buttons.css  components.css  dialogs.css  forms.css  index.css  logs.css  variables.css
src/types/: index.ts
src/utils/: helpers.ts
