[package]
name = "snaplock"
version = "0.1.0"
description = "临时离开电脑时有活动则锁屏"
authors = ["OldSun"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snaplock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
nokhwa = { version = "0.10.9", features = ["input-native", "output-wgpu"] }
image = "0.25.6"
dirs = "6.0.0"
chrono = { version = "0.4.41", features = ["serde"] }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5.3"
tokio = { version = "1", features = ["full"] }
tauri-plugin-global-shortcut = "2.3.0"
